--- a/tutorials/OneLinePlot.html
+++ b/tutorials/OneLinePlot.html
@@ -211,7 +211,7 @@ hm3</code></pre>
 <div id="some-tips" class="section level2">
 <h2>Some tips</h2>
 <p>If a function returns a <em>ggplot</em> object, then its name starts with “gg”. It needs to use <code>pdf.ggplot</code>* to create pdf. It also can be concatenated using ‘+’.</p>
-<p>If a function returns a <em>gtable</em> object, then its name starts with “gt”. It needs to use <code>pdf.gtplot</code> to create pdf, or <code>plot.gtable</code> to plot to console.</p>
+<p>If a function returns a <em>gtable</em> object, then its name starts with “gt”. It needs to use <code>pdf.gtplot</code> to create pdf, or <code>plotgt</code> to plot to console.</p>
 <p>All basic charts are designed to return a <em>ggplot</em> object for easy to extend, you may need to turn off clipping using<br />
 <code>unclip.ggplot</code> if there are overlaps between points/labels and axes.</p>
 </div>
